fix line spacing

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -63,27 +63,11 @@
   z-index: 2;
 }
 
-.products-two-line {
-  display: none;
-}
-
-.products-one-line {
-  display: block;
-}
-
 @media (max-width: 639px) {
   .overlay-title {
     width: 75%;
     margin-bottom: 6rem;
     font-size: 34px;
-  }
-
-  .products-two-line {
-    display: block;
-  }
-
-  .products-one-line {
-    display: none;
   }
 }
 
